Adds ability of evaluating different metrics
